--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
             background-color: #00e0e0;
             color: #00e0e0;
         }
+           
+        
+        .marquee {
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+
+    .marquee span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scroll 10s linear infinite;
+    }
 
     </style>
 
@@ -32,3 +45,4 @@
 
 </body>
 </html>
+
