--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 
     </style>
 
-            <!-- for example i have created made this webpage explaining my portfolio website made under summer seige-->
+            <!-- for example i have created made this webpage explaining my portfolio website made under summer seige , also all modern brow
+    sers nowadays dont support marque so i have addded the function of marquee using css.-->
             <meta charset="UTF-8">
             <title>Informative Webpage</title>
-            <marquee behavior="scroll" direction="left">only visit if you want to see cute anime characters.</marquee>
+            <div class="marquee">
+            <span>only visit if you want to see cute anime characters.</span>
+             </div>
         </head>
         <body>
         <dialog open>
@@ -45,4 +48,5 @@
 
 </body>
 </html>
+
 
