--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       padding-left: 100%;
       animation: scroll 10s linear infinite;
     }
+    @keyframes scroll {
+      0%   { transform: translateX(0%); }
+      100% { transform: translateX(-100%); }
+    }
 
     </style>
 
@@ -48,5 +52,6 @@
 
 </body>
 </html>
+
 
 
